Adding Zr version adapted for MOOSE comparison, with MOOSE output data

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ C4_cr2o3_Iman/
 C4_Zr_Leo/Matlab_code/output_file/
 C4_Zr_Leo/Matlab_code/input_file/
 C4_Zr_Leo/Plot/
+C4_Zr_for_MOOSE/Matlab_code/input_file/
+C4_Zr_for_MOOSE/Matlab_code/output_file/
